start on testing encoding

--- a/IncomeBracket.ipynb
+++ b/IncomeBracket.ipynb
@@ -90,6 +90,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cross validation\n",
+    "from sklearn import model_selection\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(X, y, test_size=0.25, random_state=5)\n",
+    "classifier_gaussiannb.fit(X_train, y_train)\n",
+    "y_test_pred = classifier_gaussiannb.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score: 63.059%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute F1 score of the classifier\n",
+    "f1 = model_selection.cross_val_score(classifier_gaussiannb, X, y, scoring='f1_weighted', cv=5)\n",
+    "print (\"F1 score: {}%\".format(round(100*f1.mean(), 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['39', 'State-gov', '77516', 'Bachelors', '13', 'Mever-married', 'Adm-clearical', 'Not-in-family', 'White', 'Male', '2174', '0', '40', 'United-States']\n",
+      "[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing encoding on single data instance\n",
+    "input_data = ['39', 'State-gov', '77516', 'Bachelors', '13', 'Mever-married',\n",
+    "             'Adm-clearical', 'Not-in-family', 'White', 'Male', '2174', \n",
+    "             '0', '40', 'United-States']\n",
+    "count = 0\n",
+    "input_data_encoder = [-1] * len(input_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
