completed IncomeBracket.ipynb

--- a/IncomeBracket.ipynb
+++ b/IncomeBracket.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,27 +61,15 @@
     "    else:\n",
     "        label_encoder.append(preprocessing.LabelEncoder())\n",
     "        X_encoded[:,i] = label_encoder[-1].fit_transform(X[:,i])\n",
-    "\n",
     "X = X_encoded[:, :-1].astype(int)\n",
     "y = X_encoded[:, -1].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GaussianNB(priors=None, var_smoothing=1e-09)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build a classifier\n",
     "classifier_gaussiannb = GaussianNB()\n",
@@ -90,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1 score: 63.059%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compute F1 score of the classifier\n",
     "f1 = model_selection.cross_val_score(classifier_gaussiannb, X, y, scoring='f1_weighted', cv=5)\n",
@@ -123,25 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['39', 'State-gov', '77516', 'Bachelors', '13', 'Mever-married', 'Adm-clearical', 'Not-in-family', 'White', 'Male', '2174', '0', '40', 'United-States']\n",
-      "[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing encoding on single data instance\n",
-    "input_data = ['39', 'State-gov', '77516', 'Bachelors', '13', 'Mever-married',\n",
-    "             'Adm-clearical', 'Not-in-family', 'White', 'Male', '2174', \n",
+    "input_data = ['39', 'State-gov', '77516', 'Bachelors', '13', 'Never-married',\n",
+    "             'Adm-clerical', 'Not-in-family', 'White', 'Male', '2174', \n",
     "             '0', '40', 'United-States']\n",
     "count = 0\n",
-    "input_data_encoder = [-1] * len(input_data)\n"
+    "input_data_encoded = [-1] * len(input_data)\n",
+    "for i,item in enumerate(input_data):\n",
+    "    if item.isdigit():\n",
+    "        input_data_encoded[i] = input_data[i]\n",
+    "    else:\n",
+    "        input_data_encoded[i] = int(label_encoder[count].transform([input_data[i]]))\n",
+    "        count = count + 1\n",
+    "input_data_encoded = np.array(input_data_encoded)\n",
+    "print(input_data_encoded)"
    ]
   },
   {
@@ -149,7 +128,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Predict and print output for a particular datapoint\n",
+    "idata_encoded_typed = input_data_encoded.astype(np.int)\n",
+    "output_class = classifier_gaussiannb.predict([input_data_encoded.astype(np.int)])\n",
+    "print (label_encoder[-1].inverse_transform(output_class))"
+   ]
   }
  ],
  "metadata": {
@@ -168,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
